# evaluator

./: .babelrc  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mysql-example.conf  package.json  pyproject.toml  vite.config.js
base/: asgi.py  settings.py  urls.py  wsgi.py
base/templates/: index.html
evaluator/: admin.py  auth.py  consumers.py  factories.py  models.py  pagination.py  routing.py  serializers.py  urls.py  utils.py
evaluator/migrations/: 0001_initial.py  0002_auto_20211012_2059.py  0003_auto_20211018_0047.py  0004_task_topics.py  0005_alter_exercise_task.py  0006_submission.py  0007_alter_exercise_options.py  0008_student.py  0009_submission_output.py  0010_auto_20220329_2228.py  0011_alter_assignment_task.py  0012_practice.py  0013_student_phone.py  0014_auto_20220505_2254.py  0015_auto_20220507_0034.py  0016_auto_20220524_2114.py  0017_auto_20220527_2312.py  0018_auto_20220621_0028.py
evaluator/templates/: password_recovery.html
evaluator/views/: __init__.py  assignment_viewset.py  assignment_viewsets.py  exercise.py  exercise_viewset.py  practice_viewset.py  reports.py  stats.py  submission_viewset.py  task_viewset.py  testcase_viewset.py  topic_viewset.py  user_view.py  user_viewset.py  views.py
src/: .env.example  App.jsx  index.html  main.jsx  utils.js
src/components/: CodeEditor.jsx  DataTable.jsx  Header.jsx  Loading.jsx  Navbar.jsx  Navigation.jsx  Notification.jsx  PaswordFieldForm.jsx  RouteWithRole.jsx  SearchInput.jsx  SelectTasks.jsx  TextFieldForm.jsx  TopicChips.jsx  TopicsAutocomplete.jsx  WithRole.jsx
(+53 files in other folders)
